@@ -5,8 +5,8 @@ license          = Perl_5
 copyright_holder = Kent Fredric <kentfredric@gmail.com>
 
 ; Uncomment this to bootstrap via self
-[Bootstrap::lib]
-try_built = 1
+[lib]
+lib = lib
 
 [@Author::KENTNL]
 :version          = 2.020
@@ -18,6 +18,8 @@ copyfiles         = LICENSE
 srcreadme         = mkdn
 twitter_extra_hash_tags = #distzilla
 bumpversions      = 1
+Test::Compile::PerFile.:version = 0.003902
+Test::Compile::PerFile.test_template = 02-raw-require.t.tpl
 
 ; version_major     = 0
 ; version_minor     = 1
