@@ -1,6 +1,14 @@
 This file contains changes in REQUIRED dependencies for standard CPAN phases (configure/build/runtime/test)
 
 0.004001
+ [Added / configure requires]
+ - perl 5.008
+
+ [Added / test requires]
+ - perl 5.008
+
+ [Changed / test requires]
+ - Test::More 0.89 → 0
 
 0.004000 2014-10-04T01:35:02Z
 
@@ -70,4 +78,3 @@ This file contains changes in REQUIRED dependencies for standard CPAN phases (co
  [Changed / runtime requires]
  - Git::Wrapper::Plus 0 → 0.003100
  - perl 5.006 → 5.008
-
